# skillset

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
examples/basic/: skillset.json
src/: conventions.rs  error.rs  lib.rs  main.rs
src/cache/: metadata.rs  mod.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs  skillset.rs  tests.rs
src/registry/: client.rs  mod.rs  publish.rs
src/skill/: manager.rs  mod.rs  types.rs
src/sources/: git.rs  mod.rs
tests/: integration_add_skill.rs  integration_git_source.rs
tests/common/: mod.rs
